--- a/mujer.html
+++ b/mujer.html
@@ -90,7 +90,7 @@
       <div class="galeria_ " id="filtro"> 
       
       </div>
-      
+      <div id="espacio"></div>
       <div class="galeria_" id="contenedor_mujer">
 
       </div>
