--- a/mujer.html
+++ b/mujer.html
@@ -92,6 +92,8 @@
       </div>
       <div id="espacio"></div>
       <div class="galeria_" id="contenedor_mujer">
+        <p class="centrar">Inicio> Mujer</p>
+        <h2 class="ind">MUJER</h2>
 
       </div>
           
