--- a/mujer.html
+++ b/mujer.html
@@ -87,7 +87,7 @@
           </select>
         </div>
       </div>                <!--------------------------->
-      <!--<div class="galeria_ " id="filtro"> </div>-->
+      <div class="galeria_ " id="filtro"> </div>
       
       <p class="centrar">Inicio> Mujer</p>
       <h2 class="ind">MUJER</h2>
