--- a/accsesorios.html
+++ b/accsesorios.html
@@ -86,62 +86,16 @@
         </div>
       </div>          <!--------------------------->
       <div class="galeria_ " id="filtro"> 
-
       </div>
       <div class="ocultar">
-        <p class="centrar">Inicio> Accsesorios</p>
-        <h2 class="ind">ACCSESORIOS</h2>
-        <div class="galeria_"> <!--GALERIA DE INDUMENTARIA-->
-          <div class="contenedor prod">
-            <button type="button" id="1" class="agregar btn btn-dark btn-sm">+</button>
-            <img src="./multimedia/accsesorios/gorra_element.jpg" alt="Gorra_element">
-              <a href="#" class="nombre_producto">GORRA ELEMENT WOLFEBORO</a>
-              <a href="#" class="precio"><br>$11999</a>
-          </div>
-          <div class="contenedor prod">
-            <button type="button" id="2" class="agregar btn btn-dark btn-sm">+</button>
-            <img src="./multimedia/accsesorios/mochila_zimith.jpg"alt="MOCHILA_ZIMITH_BOMBIT">
-            <a href="#" class="nombre_producto">MOCHILA ZIMITH BOMBIT</a>
-            <a href="#" class="precio"><br>$15000</a>
-          </div>
-          <div class="contenedor prod">
-            <button type="button" id="3" class="agregar btn btn-dark btn-sm">+</button>
-            <img src="./multimedia/accsesorios/gorro_c1rca.jpg" alt="Gorro_c1rca">
-            <a href="#" class="nombre_producto">GORRO C1RCA WALTER</a>
-            <a href="#" class="precio"><br>$10000</a>
-          </div>
-          <div class="contenedor prod">
-            <button type="button" id="4" class="agregar btn btn-dark btn-sm">+</button>
-            <img src="./multimedia/accsesorios/reloj_captainFin.jpg" alt="Reloj_captainFin">
-            <a href="#" class="nombre_producto">RELOJ CAPTAIN FIN HURRICANE</a>
-            <a href="#" class="precio"><br>$31500</a>
-          </div>
-          <div class="contenedor prod">
-            <button type="button" id="5" class="agregar btn btn-dark btn-sm">+</button>
-            <img src="./multimedia/accsesorios/gorro_billabong.jpg" alt="Gorro_billabong">
-            <a href="#" class="nombre_producto">GORRO BILLABONG ARCADE</a>
-            <a href="#" class="precio"><br>$6500</a>
-          </div>
-          <div class="contenedor prod">
-            <button type="button" id="6" class="agregar btn btn-dark btn-sm">+</button>
-            <img src="./multimedia/accsesorios/cinto_zimith.jpg" alt="CINTO_ZIMITH_CUERO_MARS">
-            <a href="#" class="nombre_producto">CINTO ZIMITH CUERO MARS</a>
-            <a href="#" class="precio"><br>$3500</a>
-          </div>
-          <div class="contenedor prod">
-            <button type="button" id="7" class="agregar btn btn-dark btn-sm">+</button>
-            <img src="./multimedia/accsesorios/MOCHILA_ZIMITH_MAXIC.jpg" alt="MOCHILA_ZIMITH_MAXIC">
-            <a href="#" class="nombre_producto">MOCHILA ZIMITH MAXIC</a>
-            <a href="#" class="precio"><br>$13500</a>
-          </div>
-          <div class="contenedor prod">
-            <button type="button" id="8" class="agregar btn btn-dark btn-sm">+</button>
-            <img src="./multimedia/accsesorios/GORRA_ZIMITH_FOMU.jpg" alt="GORRA_ZIMITH_FOMU">
-            <a href="#">GORRA ZIMITH FOMU</a>
-            <a href="#" class="precio"><br>$7500</a>
-          </div>
+        <p class="centrar">Inicio> Accesorios</p>
+        <h2 class="ind">ACCESORIOS</h2>
+        <div id="espacio"></div>
+        <div class="galeria_" id="contenedor_productos">
+        
         </div>
-      </div>                      <!--------------------------->
+      </div>
+                           <!--------------------------->
     </main>
     <footer>                  <!--FOOTER-->
         <div class="ig"> <!--LOGO IG-->
