--- a/mujer.html
+++ b/mujer.html
@@ -88,18 +88,15 @@
         </div>
       </div>                <!--------------------------->
       <div class="galeria_ " id="filtro"> 
-
       </div>
-      
       <div class="ocultar">
         <p class="centrar">Inicio> Mujer</p>
         <h2 class="ind">MUJER</h2>
         <div id="espacio"></div>
-        <div class="galeria_" id="contenedor_mujer">
+        <div class="galeria_" id="contenedor_productos">
         
         </div>
       </div>
-  
                           <!--------------------------->
     </main>
     <footer>                        <!--FOOTER-->
