--- a/calzado.html
+++ b/calzado.html
@@ -88,62 +88,15 @@
         </div>
       </div>                  <!--------------------------->
       <div class="galeria_ " id="filtro"> 
-
       </div>
       <div class="ocultar">
         <p class="centrar">Inicio> Calzado</p>
         <h2 class="ind">CALZADO</h2>
-        <div class="galeria_"> <!--GALERIA DE INDUMENTARIA-->
-          <div class="contenedor">
-            <button type="button" id="9" class="agregar btn btn-dark btn-sm">+</button>
-            <img src="./multimedia/calzado/nike_janoski_negra.jpg" alt="ZAPATILLAS_NIKE_SB_JANOSKI">
-            <a href="#" class="nombre_producto">ZAPATILLAS NIKE SB JANOSKI</a>
-            <a href="#" class="precio"><br>$21999</a>
-          </div>
-          <div class="contenedor prod">
-            <button type="button" id="10" class="agregar btn btn-dark btn-sm">+</button>
-            <img src="./multimedia/calzado/adidas_blancas.jpg"alt="Adidas_blancas">
-            <a href="#" class="nombre_producto">ZAPATILLAS ADIDAS CONTINEN</a>
-            <a href="#" class="precio"><br>$29999</a>
-          </div>
-          <div class="contenedor prod">
-            <button type="button" id="11" class="agregar btn btn-dark btn-sm">+</button>
-            <img src="./multimedia/calzado/vans_bmx.jpg" alt="Vans_bmx">
-            <a href="#" class="nombre_producto">ZAPATILLAS VANS BMX SLIP-ON</a>
-            <a href="#" class="precio"><br>$24499</a>
-          </div>
-          <div class="contenedor prod">
-            <button type="button" id="12" class="agregar btn btn-dark btn-sm">+</button>
-            <img src="./multimedia/calzado/newBalance_mujer.jpg" alt="NewBalance_mujer">
-            <a href="#" class="nombre_producto">ZAPATILLAS NEW BALANCE 574</a>
-            <a href="#" class="precio"><br>$24499</a>
-          </div>
-          <div class="contenedor prod">
-            <button type="button" id="13" class="agregar btn btn-dark btn-sm">+</button>
-            <img src="./multimedia/calzado/rusty_negras.jpg" alt="Rusty_negras">
-            <a href="#" class="nombre_producto">ZAPATILLAS RUSTY ANDREUSS</a>
-            <a href="#" class="precio"><br>$17999</a>
-          </div>
-          <div class="contenedor prod">
-            <button type="button" id="14" class="agregar btn btn-dark btn-sm">+</button>
-            <img src="./multimedia/calzado/lacoste_blanca_hombre.jpg" alt="ZAPATILLAS_LACOSTE_T-POINT">
-            <a href="#"class="nombre_producto">ZAPATILLAS LACOSTE T-POINT</a>
-            <a href="#" class="precio"><br>$40300</a>
-          </div>
-          <div class="contenedor prod">
-            <button type="button" id="15" class="agregar btn btn-dark btn-sm">+</button>
-            <img src="./multimedia/calzado/ZAPATILLAS_VANS_ULTRA_RANGE.jpg" alt="ZAPATILLAS_VANS_ULTRA_RANGE">
-            <a href="#" class="nombre_producto">ZAPATILLAS VANS ULTRA RANGE</a>
-            <a href="#" class="precio"><br>$29000</a>
-          </div>
-          <div class="contenedor prod">
-            <button type="button" id="16" class="agregar btn btn-dark btn-sm">+</button>
-            <img src="./multimedia/calzado/ZAPATILLAS_RUSTY_FAIRFAX.jpg" alt="ZAPATILLAS_RUSTY_FAIRFAX">
-            <a href="#" class="nombre_producto">ZAPATILLAS RUSTY FAIRFAX</a>
-            <a href="#" class="precio"><br>$19000</a>
-          </div>
+        <div id="espacio"></div>
+        <div class="galeria_" id="contenedor_productos">
+        
         </div>
-      </div>                         
+      </div>      
                             <!--------------------------->
     </main>
     <footer>                          <!--FOOTER-->
