--- a/deportes.html
+++ b/deportes.html
@@ -87,62 +87,16 @@
         </div>
       </div>                      <!--------------------------->
       <div class="galeria_ " id="filtro"> 
-
       </div>
       <div class="ocultar">
         <p class="centrar">Inicio> Deportes</p>
         <h2 class="ind">DEPORTES</h2>
-        <div class="galeria_">   <!--GALERIA DE INDUMENTARIA-->
-          <div class="contenedor prod">
-            <button type="button" id="17" class="agregar btn btn-dark btn-sm">+</button>
-            <img src="./multimedia/deportes/monopatin_cobra.jpg" alt="Monopatin_cobra">
-            <a href="#" class="nombre_producto">MONOPATIN COBRA</a>
-            <a href="#" class="precio"><br>$39000</a>
-          </div>
-          <div class="contenedor prod">
-            <button type="button" id="18" class="agregar btn btn-dark btn-sm">+</button>
-            <img src="./multimedia/deportes/bicicleta_bmx.jpg"alt="Bicicleta_bmx">
-            <a href="#" class="nombre_producto">BICICLETA BMX</a>
-            <a href="#" class="precio"><br>$199000</a>
-          </div>
-          <div class="contenedor prod">
-            <button type="button" id="19" class="agregar btn btn-dark btn-sm">+</button>
-            <img src="./multimedia/deportes/skate_freeVibe.jpg" alt="Skate_freeVibe">
-            <a href="#" class="nombre_producto">SKATE FREE VIBE</a>
-            <a href="#" class="precio"><br>$59000</a>
-          </div>
-          <div class="contenedor prod">
-            <button type="button" id="20" class="agregar btn btn-dark btn-sm">+</button>
-            <img src="./multimedia/deportes/tabla_captainFin_rosa.jpg" alt="Tabla_captainFin_rosa">
-            <a href="#" class="nombre_producto">TABLA CAPTAIN FIN</a>
-            <a href="#" class="precio"><br>$49000</a>
-          </div>
-          <div class="contenedor prod">
-            <button type="button" id="21" class="agregar btn btn-dark btn-sm">+</button>
-            <img src="./multimedia/deportes/rollers_start.jpg" alt="Rollers_start">
-            <a href="#" class="nombre_producto">ROLLERS START</a>
-            <a href="#" class="precio"><br>$39000</a>
-          </div>
-          <div class="contenedor prod">
-            <button type="button" id="22" class="agregar btn btn-dark btn-sm">+</button>
-            <img src="./multimedia/deportes/skate_progressive.jpg" alt="Skate_progressive">
-            <a href="#" class="nombre_producto">SKATE PROGRESSIVE</a>
-            <a href="#" class="precio"><br>$69000</a>
-          </div>
-          <div class="contenedor prod">
-            <button type="button" id="23" class="agregar btn btn-dark btn-sm">+</button>
-            <img src="./multimedia/deportes/PATINES_ARTISTICOS_STARK.jpg" alt="PATINES_ARTISTICOS_STARK">
-            <a href="#" class="nombre_producto">PATINES ARTISTICOS STARK</a>
-            <a href="#" class="precio"><br>$35000</a>
-          </div>
-          <div class="contenedor prod">
-            <button type="button" id="24" class="agregar btn btn-dark btn-sm">+</button>
-            <img src="./multimedia/deportes/TABLA_SKATE_FREE_VIBE.jpg" alt="TABLA_SKATE_FREE_VIBE">
-            <a href="#" class="nombre_producto">TABLA SKATE REE VIBE</a>
-            <a href="#" class="precio"><br>$45000</a>
-          </div>
+        <div id="espacio"></div>
+        <div class="galeria_" id="contenedor_productos">
+        
         </div>
-      </div>                        <!--------------------------->
+      </div>
+                 <!--------------------------->
     </main>
     <footer>                         <!--FOOTER-->
       <div class="ig"> <!--LOGO IG-->
