--- a/deportes.html
+++ b/deportes.html
@@ -92,7 +92,7 @@
         <p class="centrar">Inicio> Deportes</p>
         <h2 class="ind">DEPORTES</h2>
         <div id="espacio"></div>
-        <div class="galeria_" id="contenedor_productos">
+        <div class="galeria_" id="contenedor_deportes">
         
         </div>
       </div>
