--- a/hombre.html
+++ b/hombre.html
@@ -92,7 +92,7 @@
         <p class="centrar">Inicio> Hombre</p>
         <h2 class="ind">HOMBRE</h2>
         <div id="espacio"></div>
-        <div class="galeria_" id="contenedor_productos">
+        <div class="galeria_" id="contenedor_hombre">
         
         </div>
       </div>
