--- a/accsesorios.html
+++ b/accsesorios.html
@@ -91,7 +91,7 @@
         <p class="centrar">Inicio> Accesorios</p>
         <h2 class="ind">ACCESORIOS</h2>
         <div id="espacio"></div>
-        <div class="galeria_" id="contenedor_productos">
+        <div class="galeria_" id="contenedor_accesorios">
         
         </div>
       </div>
