--- a/calzado.html
+++ b/calzado.html
@@ -93,7 +93,7 @@
         <p class="centrar">Inicio> Calzado</p>
         <h2 class="ind">CALZADO</h2>
         <div id="espacio"></div>
-        <div class="galeria_" id="contenedor_productos">
+        <div class="galeria_" id="contenedor_calzado">
         
         </div>
       </div>      
