--- a/mujer.html
+++ b/mujer.html
@@ -93,7 +93,7 @@
         <p class="centrar">Inicio> Mujer</p>
         <h2 class="ind">MUJER</h2>
         <div id="espacio"></div>
-        <div class="galeria_" id="contenedor_productos">
+        <div class="galeria_" id="contenedor_mujer">
         
         </div>
       </div>
