--- a/deportes.html
+++ b/deportes.html
@@ -113,6 +113,10 @@
       <p class="cent_footer">Medios de pago</p>
       <p class="d-none ocultarTot"></p>
       <p id="carrito" class="d-none"></p>
+      <p class="d-none" id="contenedor_hombre"></p>
+      <p class="d-none" id="contenedor_calzado"></p>
+      <p class="d-none" id="contenedor_mujer"></p>
+      <p class="d-none" id="contenedor_accesorios"></p>
       <p class="scrol d-none"></p>
       <div class="medios_pago"> <!--MEDIOS DE PAGO-->
         <img src="./multimedia/tarjetas/mastercard.png" alt="TARJETA_CREDITO_MASTERCARD">
