--- a/carrito.html
+++ b/carrito.html
@@ -81,6 +81,11 @@
         <p class="cent_footer">Emal: af@hotmail.com</p>
         <p class="cent_footer">9 de Julio 150 B° Centro</p>
         <p class="cent_footer">Medios de pago</p>
+        <p class="d-none" id="contenedor_hombre"></p>
+        <p class="d-none" id="contenedor_calzado"></p>
+        <p class="d-none" id="contenedor_mujer"></p>
+        <p class="d-none" id="contenedor_deportes"></p>
+        <p class="d-none" id="contenedor_accesorios"></p>
         <div class="medios_pago"> <!--MEDIOS DE PAGO-->
           <img src="./multimedia/tarjetas/mastercard.png" alt="TARJETA_CREDITO_MASTERCARD">
           <img src="./multimedia/tarjetas/visadebito.png" alt="TARJETA_DEBITO_VISA">
