--- a/contacto.html
+++ b/contacto.html
@@ -115,6 +115,11 @@
         <p class="d-none ocultarTot"></p>
         <p id="carrito" class="d-none"></p>
         <p class="scrol d-none"></p>
+        <p class="d-none" id="contenedor_hombre"></p>
+        <p class="d-none" id="contenedor_calzado"></p>
+        <p class="d-none" id="contenedor_mujer"></p>
+        <p class="d-none" id="contenedor_deportes"></p>
+        <p class="d-none" id="contenedor_accesorios"></p>
         <div class="medios_pago"> <!--MEDIOS DE PAGO-->
           <img src="./multimedia/tarjetas/mastercard.png" alt="TARJETA_CREDITO_MASTERCARD">
           <img src="./multimedia/tarjetas/visadebito.png" alt="TARJETA_DEBITO_VISA">
