--- a/carrito.html
+++ b/carrito.html
@@ -57,7 +57,7 @@
         <h2 class="ind" id="espacio">Carrito de compras</h2>
       </div>
       <div class="scrol overflow-scroll"> 
-        <div class="galeria_carrito" id="elementos_carrito" > 
+        <div class="galeria_" id="elementos_carrito" > 
           
         </div>
       </div>
