--- a/carrito.html
+++ b/carrito.html
@@ -63,7 +63,7 @@
       </div>
       <div class="ocultarTot">
         <h2 id="espacio">TOTAL: $ <span id="tot-carrito">0</span></h2>
-  
+        <div class="btn-comprar"></div>
       </div>
       
     </main>
