--- a/formulario_compra.html
+++ b/formulario_compra.html
@@ -11,9 +11,17 @@
     <title>Datos personales y pago</title>
 </head>
 <body>
+    <header>
+        <nav class="menu bg-dg navbar navbar-dark bg-dark fixed-top">
+            <div class="container-fluid">
+              <a class="navbar-brand tit" href="index.html">Tienda AF</a>
+            </div>
+          </nav>   
+    </header>
     <main>
         <form action="">
-            <h3 class="centrar">Datos de contacto</h3>              
+            <p class="centrar" id="espacio">Entrega y pago</p>
+            <h2 class="ind">Entrega</h2>
             <div class="formulario_pago">
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Email</label>
