--- a/formulario_compra.html
+++ b/formulario_compra.html
@@ -54,8 +54,14 @@
                 </select>
                 <br><input class="form-control" type="text" placeholder="Numero de documento" required>
                 <br><p>Persona que pagara el pedido</p>
-                <br><input class="form-control" type="text" placeholder="Nombre" required>
-                <br><input class="form-control" type="text" placeholder="Apellido" required>
+                <br><div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Nombre</label>
+                    <input type="text" class="nombre form-control" placeholder="Nombre">
+                </div>
+                <br><div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Apellido</label>
+                    <input type="text" class="apellido form-control" placeholder="Apellido">
+                </div>
                 <br><input class="form-control" type="text" placeholder="Numero de telefono" required>
                 <br><p>Domicilio de la persona que pagará el pedido</p>
                 <br><input class="form-control" type="text" placeholder="Calle" required>
@@ -86,13 +92,13 @@
                     </div>
                 </div>
             </div>
-            <button type="button" class="confirmar btn btn-dark">Dark</button>
+            <input class="confirmar btn btn-dark" type="submit" value="Finalizar compra">
         </form>
     </main>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
    <!--  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script> -->
    <script src="assets/js/bootstrap.bundle.min.js"></script>
-   <script src="./js/tiendaAf.js"></script>
+   <script src="./js/compra.js"></script>
    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
 </html>
