--- a/mujer.html
+++ b/mujer.html
@@ -64,12 +64,12 @@
         <div class="area-sub-menu">
           <select class="categ sub ord btn form-select form-select-sm mb-3 text-bg-light" id="MUJER">
             <option selected>Productos</option>
-            <option value="1">Remeras</option>
-            <option value="2">Musculosas</option>
-            <option value="3">Pantalones</option>
-            <option value="4">Camisas</option>
+            <option value="1">Remera</option>
+            <option value="2">Top</option>
+            <option value="3">Jean</option>
+            <option value="4">Short</option>
             <option value="5">Campera</option>
-            <option value="6">Buzos</option>
+            <option value="6">Buzo</option>
           </select>
         </div>
         <div class="orden">
