--- a/mujer.html
+++ b/mujer.html
@@ -62,7 +62,7 @@
             <p class="sub-tit">Inicio> Mujer</p>
         </div>
         <div class="area-sub-menu">
-          <select class="categ sub ord btn form-select form-select-sm mb-3 text-bg-light" id="MUJER">
+          <select class="sub ord btn form-select form-select-sm mb-3 text-bg-light" id="MUJER">
             <option selected>Productos</option>
             <option value="1">Remera</option>
             <option value="2">Top</option>
