--- a/hombre.html
+++ b/hombre.html
@@ -62,19 +62,14 @@
             <p class="sub-tit">Inicio> Hombre</p>
         </div>
         <div class="area-sub-menu">
-          <div class="dropdown">
-            <a class="sub btn form-select form-select-sm text-bg-light" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Productos
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Remeras</a></li>
-              <li><a class="dropdown-item" href="#">Musculosas</a></li>
-              <li><a class="dropdown-item" href="#">Pantalones</a></li>
-              <li><a class="dropdown-item" href="#">Camisas</a></li>
-              <li><a class="dropdown-item" href="#">Camperas</a></li>
-              <li><a class="dropdown-item" href="#">Buzos</a></li>
-            </ul>
-          </div>
+          <select class="categ sub ord btn form-select form-select-sm mb-3 text-bg-light" id="HOMBRE">
+            <option selected>Productos</option>
+            <option value="1">Remera</option>
+            <option value="2">Joggin</option>
+            <option value="3">Pantalon</option>
+            <option value="4">Campera</option>
+            <option value="5">Buzo</option>
+          </select>
         </div>
         <div class="orden">
           <select class="sub ord btn form-select form-select-sm mb-3 text-bg-light" aria-label=".form-select-lg example">
