--- a/accsesorios.html
+++ b/accsesorios.html
@@ -62,18 +62,15 @@
             <p class="sub-tit">Inicio> Accesorios</p>
         </div>
         <div class="area-sub-menu">
-          <div class="dropdown">
-            <a class="sub btn ord form-select form-select-sm text-bg-light" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Productos
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Gorras</a></li>
-              <li><a class="dropdown-item" href="#">Gorros Invierno</a></li>
-              <li><a class="dropdown-item" href="#">Cintos</a></li>
-              <li><a class="dropdown-item" href="#">Relojes</a></li>
-              <li><a class="dropdown-item" href="#">Mochilas</a></li>
-            </ul>
-          </div>
+          <select class="categ sub ord btn form-select form-select-sm mb-3 text-bg-light" id="ACCESORIOS">
+            <option selected>Productos</option>
+            <option value="1">Gorra</option>
+            <option value="2">Gorro</option>
+            <option value="3">Reloj</option>
+            <option value="4">Cinto</option>
+            <option value="5">Lacoste</option>
+            <option value="6">Mochila</option>
+          </select>
         </div>
         <div class="orden">
           <select class="sub ord btn form-select form-select-sm text-bg-light" aria-label=".form-select-lg example">
