--- a/calzado.html
+++ b/calzado.html
@@ -62,20 +62,15 @@
             <p class="sub-tit">Inicio> Calzado</p>
         </div>
         <div class="area-sub-menu">
-          <div class="dropdown">
-            <a class="sub btn form-select form-select-sm text-bg-light" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Productos
-            </a>
-          
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Vans</a></li>
-              <li><a class="dropdown-item" href="#">Nike</a></li>
-              <li><a class="dropdown-item" href="#">Rusty</a></li>
-              <li><a class="dropdown-item" href="#">New Balance</a></li>
-              <li><a class="dropdown-item" href="#">Lacoste</a></li>
-              <li><a class="dropdown-item" href="#">Adidas</a></li>
-            </ul>
-          </div>
+          <select class="categ sub ord btn form-select form-select-sm mb-3 text-bg-light" id="CALZADO">
+            <option selected>Productos</option>
+            <option value="1">Vans</option>
+            <option value="2">Nike</option>
+            <option value="3">Rusty</option>
+            <option value="4">New Balance</option>
+            <option value="5">Lacoste</option>
+            <option value="6">Adidas</option>
+          </select>
         </div>
         <div class="orden">
           <select class="sub btn form-select form-select-sm mb-3 text-bg-light" aria-label=".form-select-lg example">
