--- a/deportes.html
+++ b/deportes.html
@@ -62,19 +62,15 @@
             <p class="sub-tit">Inicio> Deportes</p>
         </div>
         <div class="area-sub-menu">
-          <div class="dropdown">
-            <a class="sub btn ord form-select form-select-sm text-bg-light" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Productos
-            </a>
-          
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Skate</a></li>
-              <li><a class="dropdown-item" href="#">Monopatines</a></li>
-              <li><a class="dropdown-item" href="#">Surf</a></li>
-              <li><a class="dropdown-item" href="#">Bicicletas</a></li>
-              <li><a class="dropdown-item" href="#">Patines y rollers</a></li>
-            </ul>
-          </div>
+            <select class="categ sub ord btn form-select form-select-sm mb-3 text-bg-light" id="DEPORTES">
+              <option selected>Productos</option>
+              <option value="1">Skate</option>
+              <option value="2">Monopatin</option>
+              <option value="3">Surf</option>
+              <option value="4">Bicicleta</option>
+              <option value="5">Patines</option>
+              <option value="6">Rollers</option>
+            </select>
         </div>
         <div class="orden">
           <select class="sub ord btn form-select form-select-sm mb-3 text-bg-light" aria-label=".form-select-lg example">
