--- a/mujer.html
+++ b/mujer.html
@@ -84,11 +84,13 @@
       <div class="galeria_ " id="filtro"> 
       </div>
       <div class="ocultar">
-        <p class="centrar">Inicio> Mujer</p>
-        <h2 class="ind">MUJER</h2>
-        <div id="espacio"></div>
-        <div class="galeria_" id="contenedor_mujer">
+        <div class="filtros">
+          <p class="centrar">Inicio> Mujer</p>
+          <h2 class="ind">MUJER</h2>
+          <div id="espacio"></div>
+          <div class="galeria_" id="contenedor_mujer">
         
+          </div>
         </div>
       </div>
                           <!--------------------------->
