--- a/mujer.html
+++ b/mujer.html
@@ -64,20 +64,20 @@
         <div class="area-sub-menu">
           <select class="categ sub ord btn form-select form-select-sm mb-3 text-bg-light" id="MUJER">
             <option selected>Productos</option>
-            <option value="1">Remera</option>
-            <option value="2">Top</option>
-            <option value="3">Jean</option>
-            <option value="4">Short</option>
-            <option value="5">Campera</option>
-            <option value="6">Buzo</option>
+            <option value="1">Top</option>
+            <option value="2">Jean</option>
+            <option value="3">Short</option>
+            <option value="4">Campera</option>
+            <option value="5">Buzo</option>
           </select>
         </div>
         <div class="orden">
-          <select class="sub ord btn form-select form-select-sm mb-3 text-bg-light" id="MUJER">
-              <option value="1">Precio:Menor a mayor</option>
-              <option value="2">Precio: Mayor a menor</option>
-              <option value="3">Mas nuevo al mas viejo</option>
-              <option value="4">Mas viejo al mas nuevo</option>
+          <select class="ordenamiento sub ord btn form-select form-select-sm mb-3 text-bg-light" id="MUJER">
+            <option selected>Ordenar</option>
+            <option value="1">Precio:Menor a mayor</option>
+            <option value="2">Precio: Mayor a menor</option>
+            <option value="3">A-Z</option>
+            <option value="4">Z-A</option>
           </select>
         </div>
       </div>                <!--------------------------->
