--- a/calzado.html
+++ b/calzado.html
@@ -73,7 +73,7 @@
           </select>
         </div>
         <div class="orden">
-          <select class="sub btn form-select form-select-sm mb-3 text-bg-light" aria-label=".form-select-lg example">
+          <select class="sub btn form-select form-select-sm mb-3 text-bg-light" id="CALZADO" aria-label=".form-select-lg example">
               <option selected>Mas vendidos</option>
               <option value="1">Precio:Menor a mayor</option>
               <option value="2">Precio: Mayor a menor</option>
