--- a/deportes.html
+++ b/deportes.html
@@ -73,12 +73,12 @@
             </select>
         </div>
         <div class="orden">
-          <select class="sub ord btn form-select form-select-sm mb-3 text-bg-light" aria-label=".form-select-lg example">
-              <option selected>Mas vendidos</option>
-              <option value="1">Precio:Menor a mayor</option>
-              <option value="2">Precio: Mayor a menor</option>
-              <option value="3">Mas nuevo al mas viejo</option>
-              <option value="3">Mas viejo al mas nuevo</option>
+          <select class="ordenamiento sub ord btn form-select form-select-sm mb-3 text-bg-light" aria-label=".form-select-lg example" id="DEPORTES">
+            <option selected>Ordenar</option>
+            <option value="1">Precio:Menor a mayor</option>
+            <option value="2">Precio: Mayor a menor</option>
+            <option value="3">A-Z</option>
+            <option value="4">Z-A</option>
           </select>
         </div>
       </div>                      <!--------------------------->
