--- a/mujer.html
+++ b/mujer.html
@@ -18,7 +18,7 @@
         <div class="container-fluid">
           <a class="navbar-brand tit" href="index.html">Tienda AF</a>
           <form class="d-flex" >
-            <input class="form-control me-1 busqueda" type="search" placeholder="Search" aria-label="Search">
+            <input class="form-control sm-1 busqueda" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-dark" id="buscar" type="submit">Search</button>
           </form>
           <a class="carrito btn btn-dark btn-sm" href="carrito.html" role="button">Carrito</a>
