--- a/hombre.html
+++ b/hombre.html
@@ -17,10 +17,12 @@
     <nav class="menu bg-dg navbar navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand tit" href="index.html">Tienda AF</a>
-          <form class="d-flex" >
-            <input class="form-control me-1 busqueda" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-dark" id="buscar" type="submit">Search</button>
-          </form>
+          <div id="buscador">
+            <form class="d-flex" >
+              <input class="form-control sm-1 busqueda" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-dark" id="buscar" type="submit">Search</button>
+            </form>
+          </div>
           <a class="carrito btn btn-dark btn-sm" href="carrito.html" role="button">Carrito</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
             <span class="navbar-toggler-icon"></span>
