--- a/mujer.html
+++ b/mujer.html
@@ -15,48 +15,50 @@
   <header>
                               <!--BARRA DE NAVEGACIÓN-->
     <nav class="menu bg-dg navbar navbar-dark bg-dark fixed-top">
-        <div class="container-fluid">
-          <a class="navbar-brand tit" href="index.html">Tienda AF</a>
+      <div class="container-fluid">
+        <a class="navbar-brand tit" href="index.html">Tienda AF</a>
+        <div id="buscador">
           <form class="d-flex" >
             <input class="form-control sm-1 busqueda" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-dark" id="buscar" type="submit">Search</button>
           </form>
-          <a class="carrito btn btn-dark btn-sm" href="carrito.html" role="button">Carrito</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="bg-dg offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
-            <div class="offcanvas-header">
-              <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Tienda AF</h5>
-              <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-            </div>
-            <div class="offcanvas-body">
-              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                <li class="nav-item">
-                  <a class="item nav-link active" aria-current="page" href="ofertas.html">Ofertas</a>
-                </li>
-                <li class="nav-item">
-                  <a class="item nav-link active" aria-current="page" href="calzado.html">Calzado</a>
-                </li>
-                <li class="nav-item">
-                  <a class="item nav-link active" aria-current="page" href="mujer.html">Mujer</a>
-                </li>
-                <li class="nav-item">
-                  <a class="item nav-link active" aria-current="page" href="hombre.html">Hombre</a>
-                </li>
-                <li class="nav-item">
-                  <a class="item nav-link active" aria-current="page" href="accsesorios.html">Accesorios</a>
-                </li>
-                <li class="nav-item">
-                  <a class="item nav-link active" aria-current="page" href="deportes.html">Deportes</a>
-                </li>
-              </ul>
-            </div>
+        </div>
+        <a class="carrito btn btn-dark btn-sm" href="carrito.html" role="button">Carrito</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="bg-dg offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+          <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Tienda AF</h5>
+            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          </div>
+          <div class="offcanvas-body">
+            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+              <li class="nav-item">
+                <a class="item nav-link active" aria-current="page" href="ofertas.html">Ofertas</a>
+              </li>
+              <li class="nav-item">
+                <a class="item nav-link active" aria-current="page" href="calzado.html">Calzado</a>
+              </li>
+              <li class="nav-item">
+                <a class="item nav-link active" aria-current="page" href="mujer.html">Mujer</a>
+              </li>
+              <li class="nav-item">
+                <a class="item nav-link active" aria-current="page" href="hombre.html">Hombre</a>
+              </li>
+              <li class="nav-item">
+                <a class="item nav-link active" aria-current="page" href="accsesorios.html">Accesorios</a>
+              </li>
+              <li class="nav-item">
+                <a class="item nav-link active" aria-current="page" href="deportes.html">Deportes</a>
+              </li>
+            </ul>
           </div>
         </div>
-      </nav>                      <!---------------------------------------->
-    </header>
-    <main>
+      </div>
+    </nav>                      <!---------------------------------------->
+  </header>
+  <main>
       <div class="indice"> <!--INDICE Y FILTROS-->
         <div class="cat">
             <p class="sub-tit">Inicio> Mujer</p>
@@ -94,8 +96,8 @@
         </div>
       </div>
                           <!--------------------------->
-    </main>
-    <footer>                        <!--FOOTER-->
+   </main>
+  <footer>                        <!--FOOTER-->
       <div class="ig"> <!--LOGO IG-->
         <a href="https://www.instagram.com/" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/87/87390.png" alt="logo_ig"></a>
       </div>
@@ -128,7 +130,7 @@
             src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/479px-WhatsApp.svg.png"
             alt="logo_whastapp"></a>
       </div>
-    </footer>           <!------------------------->
+  </footer>           <!------------------------->
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
