--- a/ofertas.html
+++ b/ofertas.html
@@ -202,14 +202,14 @@
         </div>                  <!------------------------->
         <h2 id="treinta" class="tit_ofer animate__animated animate__lightSpeedInRight">30 OFF</h2>
         <div class="galeria_"> <!--GALERIA DE INDUMENTARIA 30 OFF-->
-          <div class="contenedor prod">
+          <div class="contenedo">
             <button type="button" class="carrito btn btn-dark btn-sm">+</button>
             <img src="./multimedia/30/buzo_billabong_gold.jpg" alt="Buzo_billabong_gold">
             <a href="#">BUZO BILLABONG GOLD</a>
             <div class="producto">30% OFF</div>
           </div>
-          <div class="contenedor prod">
-            <button type="button" class="carrito btn btn-dark btn-sm">+</button>
+          <div class="contenedor">
+            <button type="button" class="agregar btn btn-dark btn-sm">+</button>
             <img src="./multimedia/30/joggin_campion_violeta.jpg"alt="Joggin_campion_violeta">
             <a href="#">JOGGIN CHAMPION VIOLETA</a>
             <div class="producto">30% OFF</div>
