--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@
       <p class="d-none" id="contenedor_mujer"></p>
       <p class="d-none" id="contenedor_deportes"></p>
       <p class="d-none" id="contenedor_accesorios"></p>
+      <p class="d-none categ" ></p>
+      <p class="d-none ordenamiento"></p>
       <div class="medios_pago">           <!--MEDIOS DE PAGO-->
           <img src="./multimedia/tarjetas/mastercard.png" alt="TARJETA_CREDITO_MASTERCARD">
           <img src="./multimedia/tarjetas/visadebito.png" alt="TARJETA_DEBITO_VISA">
