--- a/formaPago.html
+++ b/formaPago.html
@@ -34,9 +34,6 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item">
-                  <a class="item nav-link active" aria-current="page" href="ofertas.html">Ofertas</a>
-                </li>
-                <li class="nav-item">
                   <a class="item nav-link active" aria-current="page" href="calzado.html">Calzado</a>
                 </li>
                 <li class="nav-item">
@@ -94,6 +91,8 @@
       <p class="d-none" id="contenedor_mujer"></p>
       <p class="d-none" id="contenedor_deportes"></p>
       <p class="d-none" id="contenedor_accesorios"></p>
+      <p class="d-none categ" ></p>
+      <p class="d-none ordenamiento"></p>
       <div class="medios_pago"> <!--MEDIOS DE PAGO-->
         <img src="./multimedia/tarjetas/mastercard.png" alt="TARJETA_CREDITO_MASTERCARD">
         <img src="./multimedia/tarjetas/visadebito.png" alt="TARJETA_DEBITO_VISA">
