--- a/contacto.html
+++ b/contacto.html
@@ -82,7 +82,6 @@
                   <option selected>Motivo</option>
                   <option value="1">Reclamos</option>
                   <option value="2">Opiniones</option>
-                  <option value="2">Otros</option>
                 </select>
               </div>
               <div>
@@ -143,5 +142,6 @@
    <!--  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script> -->
    <script src="assets/js/bootstrap.bundle.min.js"></script>
    <script src="./js/tiendaAf.js"></script>
+   <script src="./js/contacto.js"></script>
 </body>
 </html>
