--- a/contacto.html
+++ b/contacto.html
@@ -81,9 +81,8 @@
                 <label for="comen">Consulta</label>
                 <textarea name="comen" id="" cols="30" rows="10" required></textarea>
               </div>
-              <div>
-                <input class="enviar" type="submit" value="Enviar">
-              </div>
+              <input class="enviar btn btn-dark" type="submit" value="Enviar">
+              
             </legend>
           </fieldset>
         </form>
