--- a/contacto.html
+++ b/contacto.html
@@ -81,8 +81,9 @@
                 <label for="comen">Consulta</label>
                 <textarea name="comen" id="" cols="30" rows="10" required></textarea>
               </div>
-              <input class="enviar btn btn-dark" type="submit" value="Enviar">
-              
+              <div>
+                <input class="enviar btn btn-dark" type="submit" value="Enviar">
+              </div>
             </legend>
           </fieldset>
         </form>
