--- a/contacto.html
+++ b/contacto.html
@@ -71,7 +71,7 @@
               </div>
               <div>
                 <label for="motivo">Motivo de consulta</label >
-                <select class="motivo" name="motivo" id="" required>
+                <select class="motivo" required>
                   <option selected>Motivo</option>
                   <option value="1">Reclamos</option>
                   <option value="2">Opiniones</option>
