--- a/mujer.html
+++ b/mujer.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/estilo.css">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="icon" href="./multimedia/favicon.ico">
     <meta name="keywords" content="indumentaria,indumetaria femenina,ropa feminina,calzado,zapatillas,ropa invierno,ropa verano,ropa primavera,camperas,buzos,pantalones,jean,jogger,remeras,musculosas,camisas, Captain Fin, Zimith, oneill, Vans, Nike, Converse, Element, C1rca, Rip Curl, Rusty">
     <meta name="description" content="Venta online de calzado, indumentaria, accesorios y más. Hacemos envíos a todo el país. Pagá en cuotas sin interés.">
@@ -16,18 +17,10 @@
                               <!--BARRA DE NAVEGACIÓN-->
     <nav class="menu bg-dg navbar navbar-dark bg-dark fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand tit" href="index.html">Tienda AF</a>
-        <div id="buscador">
-          <form class="d-flex" >
-            <input class="form-control sm-1 busqueda" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-dark" id="buscar" type="submit">Search</button>
-          </form>
-        </div>
-        <a class="carrito btn btn-dark btn-sm" href="carrito.html" role="button">Carrito</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="bg-dg offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+        <div class="bg-dg offcanvas offcanvas-start text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
           <div class="offcanvas-header">
             <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Tienda AF</h5>
             <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -52,6 +45,15 @@
             </ul>
           </div>
         </div>
+        <div id="buscador">
+          <form class="d-flex" >
+            <input class="busc form-control sm-1 busqueda" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-dark" id="buscar" type="submit">Search</button>
+          </form>
+        </div>
+        <a id="titulo" class="navbar-brand tit" href="index.html">Tienda AF</a>
+        <a class="carrito btn btn-dark btn-sm" href="carrito.html" role="button"><i class="bi bi-cart"><span id="cant_prod">0</span></i></a>
+        
       </div>
     </nav>                      <!---------------------------------------->
   </header>
