--- a/carrito.html
+++ b/carrito.html
@@ -46,7 +46,7 @@
         <div id="buscador">
         </div>
         <a id="titulo" class="navbar-brand tit" href="index.html">Tienda AF</a>
-        <a class="carrito btn btn-dark btn-sm" href="carrito.html" role="button"></a>
+        <a class="carrito btn btn-dark btn-sm" href="carrito.html" role="button"><i class="bi bi-cart"><span id="cant_prod">0</span></i></a>
         
       </div>
     </nav>
